[package]
name = "utf8next"
authors = ["ErisianArchitect <https://github.com/ErisianArchitect>"]
version = "1.0.0"
edition = "2024"
repository = "https://github.com/ErisianArchitect/utf8next"
description = "A simple function for getting the next character and its length in bytes from a string."
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/utf8next"
# Version is unchanged from previous release. Do not set to `publish = true` until
# the new version release, at which point the version should be bumped.
publish = false

